--- a/students/karlgentner/tabs/index.html
+++ b/students/karlgentner/tabs/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="tabs.js" type="text/javascript">
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+  <script type="text/javascript" src="tabs.js" >
 </script>
   <meta charset="utf-8">
 </head>
@@ -12,29 +12,11 @@
   <nav>
     <h1>Navigation</h1>
     <ul class="tabs">
-        <li class="selected">
-            <a href="#home">Home</a>
-        </li>
-        <li>
-            <a href="#articles">Articles</a>
-        </li>
-        <li>
-            <a href="#portfolio">Portfolio</a>
-        </li>
     </ul>
   </nav>
   
 <div class="tabOutputArea">
-   <div id="home" class="tabContent">
-       <p>The home is here.</p>
-   </div>
-   <div id="articles" class="tabContent">
-       <p>The articles are here.</p>
-   </div>
-   <div id="portfolio" class="tabContent">
-       <p>The portfolio is here.</p>
-   </div>
-  </div>
+</div>
 
 </body>
 </html>
